cabal-version:      3.0
name:               hs-market-maker
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alen Kis
maintainer:         16632804+alenkis@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common defaults
    default-language: GHC2021
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

library
    import:          defaults
    hs-source-dirs:  src
    exposed-modules: MarketMaker
    other-modules:   Paths_hs_market_maker
    autogen-modules: Paths_hs_market_maker
    build-depends:   base ^>=4.18.3.0

executable hs-market-maker
    import:         defaults
    hs-source-dirs: app
    main-is:        Main.hs
    build-depends:
        , base
        , hs-market-maker

test-suite hs-market-maker-test
    import:         defaults
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Main.hs
    build-depends:
        , base
        , hedgehog        ^>=1.5
        , hs-market-maker
        , tasty           ^>=1.5
        , tasty-hedgehog  ^>=1.4
