cabal-version:      3.0
name:               lmsr
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alen Kis
maintainer:         16632804+alenkis@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common defaults
    default-language:   GHC2021
    default-extensions:
        DerivingStrategies
        LambdaCase
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings

    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

library
    import:          defaults
    hs-source-dirs:  src
    exposed-modules:
        LMSR

    build-depends:
        , base    ^>=4.18.3.0
        , text    ^>=2.0
        , vector  ^>=0.13

executable lmsr
    import:          defaults
    hs-source-dirs:  app
    main-is:         Main.hs
    other-modules:
        Paths_lmsr

    autogen-modules: Paths_lmsr
    build-depends:
        , base
        , lmsr
        , text
        , vector

test-suite lmsr-test
    import:         defaults
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Main.hs
    build-depends:
        , base
        , hedgehog        ^>=1.5
        , lmsr
        , tasty           ^>=1.5
        , tasty-hedgehog  ^>=1.4
        , tasty-hunit     ^>=0.10
        , vector
